[gd_scene load_steps=6 format=3 uid="uid://slbrqyq53qm8"]

[ext_resource type="Script" path="res://Assets/Blocks/BrickBlock.gd" id="1_8w7x6"]
[ext_resource type="SpriteFrames" uid="uid://d1f7npxoy4rs" path="res://Assets/Blocks/BrickBlock_SpriteFrames.tres" id="2_b8g7b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fggmh"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1b71f"]
emission_shape = 1
emission_sphere_radius = 10.17
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
gravity = Vector3(0, 98, 0)
initial_velocity_min = 5.13
initial_velocity_max = 82.05
angular_velocity_min = 107.08
angular_velocity_max = 720.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
color = Color(1, 0.65098, 0, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_scqj8"]
emission_shape = 1
emission_sphere_radius = 10.17
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
gravity = Vector3(0, 98, 0)
initial_velocity_min = 5.13
initial_velocity_max = 82.05
angular_velocity_min = 107.08
angular_velocity_max = 720.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
color = Color(1, 1, 0, 1)

[node name="BrickBlock" type="StaticBody2D"]
collision_layer = 9
collision_mask = 0
script = ExtResource("1_8w7x6")

[node name="Visual2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_b8g7b")
animation = &"Unbroken"

[node name="Collision2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fggmh")

[node name="VisualFX" type="Node2D" parent="."]

[node name="Explosion" type="GPUParticles2D" parent="VisualFX"]
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_1b71f")
lifetime = 3.0
one_shot = true
explosiveness = 1.0

[node name="Coin" type="GPUParticles2D" parent="VisualFX"]
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_scqj8")
lifetime = 3.0
one_shot = true
explosiveness = 1.0

[node name="Properties" type="Node" parent="."]

[node name="Breakable" type="Node" parent="Properties"]

[node name="Timer" type="Node" parent="."]

[node name="Cleanup" type="Timer" parent="Timer"]
wait_time = 5.0

[connection signal="timeout" from="Timer/Cleanup" to="." method="_on_cleanup_timeout"]
